--- a/src/component/activity-setting/activity-setting.css
+++ b/src/component/activity-setting/activity-setting.css
@@ -1,5 +1,5 @@
 .activity-setting {
-    width: 500px;
+    min-width: 500px;
 
 }
 .activity-setting header {
